Various agent adjustments